@@ -34,6 +34,7 @@ https://github.com/elastic/apm-agent-go/compare/v1.15.0...main[View commits]
 - Replace apm.DefaultTracer with an initialization function {pull}1189[#(1189)]
 - Remove transport.Default, construct a new Transport in each new tracer {pull}1195[#(1195)]
 - Add service name and version to User-Agent header {pull}1196[#(1196)]
+- Replace Sampler with ExtendedSampler {pull}1206[#(1206)]
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
